# ensc-annotation-tools

./: .gitignore  LICENSE  README.md
src/: Makefile.am  Makefile.am.common  autogen.sh  configure.ac
src/OBDA/: BioIndex.c  BioIndex.h  Makefile.am  parsers.c  parsers.h
src/Programs/: Makefile.am  RefineSolexaGenes.c  RefineSolexaGenes.h  RoughTranscripts.c  RoughTranscripts.h  bamcount.c  bamcount_exon.c  bamcov.c  bamhelper.h  bammap.c  countsnps.c  fastasplit.c  indicate.c  translate_main.c
